vlib/v/checker/tests/function_wrong_arg_type.vv
fn f(x int) int {
	return x+x
}

fn main() {
	a := 12.3
	q := f(a)
	println('$q')
}
